<resources>
    <string name="app_name">Robot</string>

    <string name="step1">Étape 1 :</string>
    <string name="step1desc">Veuillez vous connecter au robot</string>
    <string name="step2">Étape 2 :</string>
    <string name="step2desc">Choisissez votre mode</string>
    <string name="buttonmode">Mode bouton</string>
    <string name="acceleromode">Mode accéléromètre</string>
    <string name="close">Fermer</string>
    <string name="connection">Connexion</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="lightsdesc">Allumer les phares</string>
    <string name="neonsdesc">Allumer les néons et mode</string>
    <string name="cameradesc">Allumer la caméra</string>
    <string name="settings">Paramètres</string>
    <string name="manual">Manuel</string>
    <string name="auto">Automatique</string>
    <string name="red">Rouge</string>
    <string name="green">Vert</string>
    <string name="blue">Bleu</string>
    <string name="neonscolordesc">Couleur du néon</string>
    <string name="speeddesc">Vitesse des moteurs</string>
    <string name="distance">Distance :</string>
    <string name="centimeters">cm</string>

</resources>
