<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.routinj.robot.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step1desc"
        android:id="@+id/text_Step1Desc"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <Button
        android:text="@string/connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/button_BlueTConnection"
        android:onClick="onClick"
        android:layout_below="@+id/text_Step1Desc"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/text_step1" />

    <TextView
        android:text="@string/step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_BlueTConnection"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp"
        android:id="@+id/text_Step2" />

    <TextView
        android:text="@string/step2desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_Step2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:id="@+id/text_Step2Desc" />

    <Button
        android:text="@string/buttonmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_ButtonsActivity"
        android:onClick="onClick"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/text_Step2Desc"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/acceleromode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:id="@+id/button_AccelerometerActivity"
        android:onClick="onClick"
        android:layout_below="@+id/button_ButtonsActivity"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_SettingsActivity"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/button_Close"
        android:layout_toStartOf="@+id/button_Close" />

    <Button
        android:text="@string/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_Close"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
