<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_accelerometer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.routinj.robot.AccelerometerActivity">

    <Button
        android:text="@string/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/button_Close"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick" />

    <Button
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_Close"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button_SettingsActivity"
        android:layout_toLeftOf="@+id/button_Close"
        android:layout_toStartOf="@+id/button_Close"
        android:onClick="onClick" />

    <ImageView
        app:srcCompat="@android:drawable/ic_popup_sync"
        android:id="@+id/image_Dir"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_inactive"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/image_Sensor1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_inactive"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/image_Sensor2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_inactive"
        android:id="@+id/image_Sensor3"
        android:layout_above="@+id/button_SettingsActivity"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/image_Sensor3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:id="@+id/text_Distance" />

    <TextView
        android:text="@string/centimeters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_Centimeters"
        android:layout_alignBaseline="@+id/text_DistanceValue"
        android:layout_alignBottom="@+id/text_DistanceValue"
        android:layout_toRightOf="@+id/text_DistanceValue"
        android:layout_toEndOf="@+id/text_DistanceValue"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp" />

    <TextView
        android:text="000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:id="@+id/text_DistanceValue"
        android:layout_alignBaseline="@+id/text_Distance"
        android:layout_alignBottom="@+id/text_Distance"
        android:layout_toRightOf="@+id/text_Distance"
        android:layout_toEndOf="@+id/text_Distance" />

</RelativeLayout>
