<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_buttons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.routinj.robot.ButtonsActivity">

    <Button
        android:text="@string/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_CloseActivity"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_left"
        android:id="@+id/button_Left"
        android:layout_below="@+id/button_Forward"
        android:layout_toLeftOf="@+id/button_Forward"
        android:layout_toStartOf="@+id/button_Forward" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_down"
        android:id="@+id/button_Backward"
        android:layout_below="@+id/button_Left"
        android:layout_toRightOf="@+id/button_Left"
        android:layout_toEndOf="@+id/button_Left" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_right"
        android:id="@+id/button_Right"
        android:layout_below="@+id/button_Forward"
        android:layout_toRightOf="@+id/button_Backward"
        android:layout_toEndOf="@+id/button_Backward" />

    <Button
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_CloseActivity"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/button_SettingsActivity"
        android:onClick="onClick"
        android:layout_toLeftOf="@+id/button_CloseActivity"
        android:layout_toStartOf="@+id/button_CloseActivity" />

    <TextView
        android:text="@string/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_Distance"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/button_Backward"
        android:layout_alignRight="@+id/button_Backward"
        android:layout_alignEnd="@+id/button_Backward"
        android:layout_marginRight="52dp"
        android:layout_marginEnd="52dp" />

    <TextView
        android:text="000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_DistanceValue"
        android:layout_alignBaseline="@+id/text_Distance"
        android:layout_alignBottom="@+id/text_Distance"
        android:layout_alignRight="@+id/button_Backward"
        android:layout_alignEnd="@+id/button_Backward"
        android:layout_marginRight="13dp"
        android:layout_marginEnd="13dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_inactive"
        android:id="@+id/image_Sensor1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_inactive"
        android:id="@+id/image_Sensor2"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_inactive"
        android:id="@+id/image_Sensor3"
        android:layout_above="@+id/button_SettingsActivity"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/ic_up"
        android:id="@+id/button_Forward"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/centimeters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_DistanceValue"
        android:layout_toRightOf="@+id/text_Distance"
        android:layout_toEndOf="@+id/text_Distance"
        android:id="@+id/text_Centimeters" />

</RelativeLayout>
